# claude-agent-sdk-example

./: CHANGELOG.md  CITATION.cff  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  screenshots.yml
docs/: architecture.md  customization.md  diagrams.md  evaluation.md  faq.md  getting-started.md  portfolio-config.json  sample-run.txt
evals/: golden.json  run.py
examples/: corpus.md  research_assistant.py
src/claude_agent_example/: __init__.py  agent.py  cli.py  tools.py
tests/: test_agent.py  test_tools.py
